# ITMO-ML-25

./: example-test.txt  meson.build
include/: constants.h  figure-manager.h  figure.h  grid.h  tetris-game.h
include/common/: render.h
include/genetic/: brain.h  constants.h  genetic-algorithm.h  neural-network.h
src/: figure-manager.cpp  grid.cpp  meson.build  tetris-game.cpp
src/genetic/: neural-network.cpp
